# the-jarvice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INFRASTRUCTURE_REGISTRY.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  setup.sh
docs/: ARCHITECTURE-FULL.md  ARCHITECTURE.md  CHEATSHEET.md  DESIGN-SYSTEM.md  PRESENTATION.md  PROMPT-PRESENTATION.md  QUICK_START.md  SECURITY.md  configuration.md  installation.md  pii-pipeline-architecture.md
landing/: LANDING-REVIEW.md  index.html  robots.txt  sitemap.xml
reviews/: architecture-completeness.md  architecture-pragmatism.md  architecture-release-completeness.md  architecture-release-pragmatism.md  architecture-release-sysdesign.md  architecture-system-design.md
scripts/: deploy-openclaw-linux.sh  deploy-openclaw-macos.sh
setup/: setup.sh  uninstall.sh
skills/create-bot/: SKILL.md
specs/: sprint-003.md  sprint-004.md
sprints/: sprint-003.md  sprint-004.md
tests/: SECURITY_REPORT.md  __init__.py  test_e2e.py  test_sprint001.py  test_sprint002.py  test_sprint002_qa.py  test_sprint003.py  test_sprint004.py  test_stage1.py
the_jarvice/: __init__.py
the_jarvice/cli/: __init__.py  main.py
the_jarvice/config/: config_schema.yaml  openclaw_template.json
the_jarvice/core/: __init__.py  config.py  context_scrubber.py  doctor.py  keyring_utils.py  log.py  log_utils.py  providers.py  scraper_base.py  state.py
the_jarvice/scrapers/: __init__.py  _base.py
the_jarvice/scrapers/exchange/: __init__.py  scraper.py
the_jarvice/scrapers/pii/: __init__.py  anonymizer.py
the_jarvice/scrapers/teams/: __init__.py  scraper.py
